# 8320

./: .yarnrc.yml  README.md  index.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/src/: main.rs
