[package]
name = "reproduce_8320"
version = "0.1.0"
description = "A Tauri App"
authors = ["lopo<lopo@zju.edu.cn>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "config-json5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sysinfo = "0.29.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
